--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.3",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
